[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Entities/Bomber/SpritesSheet.png" type="Texture" id=1]
[ext_resource path="res://assets/Shadows/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://src/Overlap/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Overlap/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Entities/Bomber/Bomber.gd" type="Script" id=5]
[ext_resource path="res://src/Entities/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Entities/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Stats.gd" type="Script" id=8]
[ext_resource path="res://White_Color_Shader.shader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 9.0
height = 10.0

[sub_resource type="CircleShape2D" id=5]
radius = 83.006

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bomber" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 32

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 16

[node name="CollisionPolygon2D" parent="HitBox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 5 )

[node name="ThrowerPos" type="Node2D" parent="."]

[node name="Left" type="Position2D" parent="ThrowerPos"]
position = Vector2( -14, -13 )

[node name="Right" type="Position2D" parent="ThrowerPos"]
position = Vector2( 14, -13 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]
wander_range = 128

[node name="Stats" type="Node" parent="."]
script = ExtResource( 8 )
max_health = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 6 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 7 )
anims/stop = SubResource( 8 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="HitBox"]
[editable path="PlayerDetectionZone"]
